Jean-Philippe Barrette-LaPierre (03 January 2008) version 0.7.1
- Fixed missing specialization declaration in InfoTypeConverter. 
  (Thanks to Ryan Allen for bug report)
	
Jean-Philippe Barrette-LaPierre (24 October 2007) version 0.7.1
- Added utility functions. (operator<< overloading for std::ostreams)
- Namespace semicolon fix provided by Joerg.
- Added global.h to distribution
- Removed config.h usage
- Took Jeff Ye changes for the curlpp.spec

Jean-Philippe Barrette-LaPierre (3 October 2007) version 0.7.0
- Changed to version 0.7.1

Jean-Philippe Barrette-LaPierre (16 January 2007) version 0.7.0
- Added boost.function (http://www.boost.org)  feature.

Jean-Philippe Barrette-LaPierre (13 January 2007) version 0.7.0
- Fixed Functor arguments binding.
- Enabled example 10.
- Added make_functor function (see example10).
- WriteData is now called WriteFile.
- Disabled buggy WriteStream.
- Added example17 (binded method functor).

Jean-Philippe Barrette-LaPierre (13 January 2007) version 0.7.0-pre2
- Changed to version 0.7.0

Armel Asselin (21 November 2006) version 0.7.0-pre2
- Added some missing options (some unavailable CURLOPT)
- Fixed Options for Quote/PreQuote/PostQuote (was long, now is std::list<std::string>).
- Added cURLpp::Easy::reset.
- Fixed wrong cURLpp::Easy::InfoGetter declaration (struct/class mix).
- Added implementation for long and double Info.
- cURLpp::Multi removes the easy handles remaining inside itself when destroyed (allows nice handling of exceptions when a Multi is involved).
- Changed to version 0.7.0

Jean-Philippe Barrette-LaPierre (08 August 2006) version 0.7.0-pre2
- Added example 16
	
Jean-Philippe Barrette-LaPierre (30 June 2006) version 0.7.0-pre2
- Added the NotAvailable feature. If CURLPP_ALLOW_NOT_AVAILABLE is 
  defined, it allow us to compile code not available for the current
  libcURL version.  
- Added the NoValueOptionTrait. This will allow options with no values,
  as CURLOPT_SSLENGINE_DEFAULT, for instance.
